--- a/src/main/resources/templates/episode-player.html
+++ b/src/main/resources/templates/episode-player.html
@@ -13,6 +13,7 @@
     <div class="main-content-episode">
       <div class="episode-info">
         <h1 th:text="${serialTitle}"></h1>
+        <h2 class="next-button-episode-player-r8Fw3">Next</h2>
         <h2>Sezon <span th:text="${seasonNumber}"></span>, Epizod <span th:text="${episodeNumber}"></span></h2>
       </div>
       <div class="responsive-iframe-container">
