--- a/src/main/resources/templates/admin/sidebar.html
+++ b/src/main/resources/templates/admin/sidebar.html
@@ -47,6 +47,7 @@
                     <li><a th:href="@{/admin/manage-series-promo-box}">Series promo box</a></li>
                     <li><a th:href="@{admin/manage-movies-promo-box}">Movies promo box</a></li>
                     <li><a th:href="@{/admin/manage-series-carousels}">Manege series carousels</a></li>
+                    <li><a th:href="@{/admin/manage-movies-carousels}">Manege movies carousels</a></li>
                 </ul>
             </li>
         </ul>
