--- a/src/main/resources/templates/admin/movies/manage-movies-carousels-form.html
+++ b/src/main/resources/templates/admin/movies/manage-movies-carousels-form.html
@@ -9,11 +9,11 @@
 
 <div class="Layout-module-internal-page--krBv">
   <div th:replace="~{header :: header}"></div>
-  <h1 class="page-header-admin">Administration panel - Edit series carousels</h1>
+  <h1 class="page-header-admin">Administration panel - Edit movies carousels</h1>
   <div id="content" class="admin-panel">
     <div th:replace="~{admin/sidebar :: sidebar}"></div>
     <div class="main-content">
-      <form th:action="@{/admin/manage-series-carousels/save}" method="post">
+      <form th:action="@{/admin/manage-movies-carousels/save}" method="post">
         <div th:if="${message}" th:text="${message}" class="alert alert-danger"></div>
         <div class="grid-container">
           <div th:each="entry : ${genresWithStatus}">
